<resources>
    <string name="app_name">Parsetagram</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">tMggfGZMHJZHUdypIVwYKvnqnY5k2QsojE6ISwL4</string>
    <string name="back4app_client_key">4WgUYqIgE89G0l5ksjSrNj8kwXlDPenOTodFkmPr</string>
    <string name="description">Description</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>